{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 96,
  "lineage": "a9e8ff8e-241c-d2b0-956e-7b8e19c68bef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:security-group/sg-0ca4f8a8f9a82c425",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca4f8a8f9a82c425",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240422204211634400000003",
            "name_prefix": "terraform-",
            "owner_id": "381491958741",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058c8898de1b96595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:loadbalancer/app/alb-bermet-hw/133cd835cda16937",
            "arn_suffix": "app/alb-bermet-hw/133cd835cda16937",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-bermet-hw-1480865940.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:381491958741:loadbalancer/app/alb-bermet-hw/133cd835cda16937",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-bermet-hw",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ca4f8a8f9a82c425"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0186d835712bdfe17"
              },
              {
                "subnet_id": "subnet-0478e5dae90cddb25"
              }
            ],
            "subnets": [
              "subnet-0186d835712bdfe17",
              "subnet-0478e5dae90cddb25"
            ],
            "tags": {
              "Name": "alb-bermet-hw"
            },
            "tags_all": {
              "Name": "alb-bermet-hw"
            },
            "vpc_id": "vpc-058c8898de1b96595",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:listener/app/alb-bermet-hw/133cd835cda16937/0c744c545bdddc84",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:targetgroup/tf-20240422204211619200000001/54c152c58235fd10",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381491958741:listener/app/alb-bermet-hw/133cd835cda16937/0c744c545bdddc84",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:loadbalancer/app/alb-bermet-hw/133cd835cda16937",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:targetgroup/tf-20240422204211619200000001/54c152c58235fd10",
            "arn_suffix": "targetgroup/tf-20240422204211619200000001/54c152c58235fd10",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381491958741:targetgroup/tf-20240422204211619200000001/54c152c58235fd10",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240422204211619200000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-058c8898de1b96595"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc5a78021327eea3",
            "domain": "vpc",
            "id": "eipalloc-0cc5a78021327eea3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-207-48-115.compute-1.amazonaws.com",
            "public_ip": "34.207.48.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Bermet-eip"
            },
            "tags_all": {
              "Name": "Bermet-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:internet-gateway/igw-0d642fb5b76bb367f",
            "id": "igw-0d642fb5b76bb367f",
            "owner_id": "381491958741",
            "tags": {
              "Name": "Bermet-igw"
            },
            "tags_all": {
              "Name": "Bermet-igw"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc5a78021327eea3",
            "association_id": "eipassoc-0eb1279c150e1092a",
            "connectivity_type": "public",
            "id": "nat-010a34c9be7a5b961",
            "network_interface_id": "eni-0bfd5eedc40cfc049",
            "private_ip": "10.0.1.168",
            "public_ip": "34.207.48.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0186d835712bdfe17"
          },
          "dependencies": [
            "module.networking.aws_eip.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:route-table/rtb-0ef2400541b357cc3",
            "id": "rtb-0ef2400541b357cc3",
            "owner_id": "381491958741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-010a34c9be7a5b961",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058c8898de1b96595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.private",
            "module.networking.aws_nat_gateway.NAT",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:route-table/rtb-03c686b9db76f79fb",
            "id": "rtb-03c686b9db76f79fb",
            "owner_id": "381491958741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d642fb5b76bb367f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058c8898de1b96595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f70273f48d67d8c",
            "route_table_id": "rtb-0ef2400541b357cc3",
            "subnet_id": "subnet-09ef49a2a35a509a2"
          },
          "dependencies": [
            "module.networking.aws_eip.private",
            "module.networking.aws_nat_gateway.NAT",
            "module.networking.aws_route_table.private-rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e962d043e3128d8",
            "route_table_id": "rtb-0ef2400541b357cc3",
            "subnet_id": "subnet-022dfd8f7e42b92cf"
          },
          "dependencies": [
            "module.networking.aws_eip.private",
            "module.networking.aws_nat_gateway.NAT",
            "module.networking.aws_route_table.private-rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e58fb21218607e1",
            "route_table_id": "rtb-03c686b9db76f79fb",
            "subnet_id": "subnet-0186d835712bdfe17"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public-rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05784cc65c2be5399",
            "route_table_id": "rtb-03c686b9db76f79fb",
            "subnet_id": "subnet-0478e5dae90cddb25"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public-rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-09ef49a2a35a509a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ef49a2a35a509a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-private-subnet-10.0.3.0/24"
            },
            "tags_all": {
              "Name": "Bermet-private-subnet-10.0.3.0/24"
            },
            "vpc_id": "vpc-058c8898de1b96595"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-022dfd8f7e42b92cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022dfd8f7e42b92cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-private-subnet-10.0.4.0/24"
            },
            "tags_all": {
              "Name": "Bermet-private-subnet-10.0.4.0/24"
            },
            "vpc_id": "vpc-058c8898de1b96595"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-0186d835712bdfe17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0186d835712bdfe17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-public-subnet-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "Bermet-public-subnet-10.0.1.0/24"
            },
            "vpc_id": "vpc-058c8898de1b96595"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-0478e5dae90cddb25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0478e5dae90cddb25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-public-subnet-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "Bermet-public-subnet-10.0.2.0/24"
            },
            "vpc_id": "vpc-058c8898de1b96595"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:vpc/vpc-058c8898de1b96595",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084a84464971ed5b9",
            "default_route_table_id": "rtb-0b1f2dcfa4e38fd1d",
            "default_security_group_id": "sg-06e951b675cdf7277",
            "dhcp_options_id": "dopt-0b30db26f8a12ea76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058c8898de1b96595",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1f2dcfa4e38fd1d",
            "owner_id": "381491958741",
            "tags": {
              "Name": "Bermet-vpc"
            },
            "tags_all": {
              "Name": "Bermet-vpc"
            }
          }
        }
      ]
    }
  ]
}